--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 mkdocs = "^1.3.0"
+mkdocs-material = "^8.2.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
